--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@ yarn-error.log*
 .env*.local
 .vercel
 next-env.d.ts
+
+# terraform
+terraform/.terraform/
+terraform/.terraform.lock.hcl
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/*.tfvars
+terraform/crash.log
+terraform/.terraformrc
