--- a/package.json
+++ b/package.json
@@ -11,24 +11,26 @@
   },
   "dependencies": {
     "@theguild/remark-mermaid": "^0.3.0",
+    "fumadocs-core": "15.7.12",
+    "fumadocs-mdx": "11.10.0",
+    "fumadocs-ui": "15.7.12",
+    "next": "15.5.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "rehype-components": "^0.3.0",
+    "remark-directive": "^4.0.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/mdx": "^2.0.13",
     "@types/node": "24.3.3",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "fumadocs-core": "15.7.12",
-    "fumadocs-mdx": "11.10.0",
-    "fumadocs-ui": "15.7.12",
-    "next": "15.5.3",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.3",
     "postcss": "^8.5.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.3"
   }
 }
