--- a/amplify.yml
+++ b/amplify.yml
@@ -3,6 +3,8 @@ frontend:
   phases:
     preBuild:
       commands:
+        - export NPM_CONFIG_PRODUCTION=false
+        - export YARN_PRODUCTION=false
         - npm ci
         - npm run postinstall
     build:
